2008-01-28 Arina Itkes <arinai@mainsoft.com>
	
	* DataTable.cs: Fix for IXmlSerializable.WriteXml.

2007-10-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataColumn.cs: Fixed ParamName of ArgumentNullException. Modified
	exception message for invalid DateTimeMode value to match MS. Code
	formatting.

2007-10-19  Nagappan <anagappan@novell.com> 

	* DataRelation.cs: Removed bogus TODO.

2007-09-27  Nagappan A <anagappan@novell.com> 

	* DataRelationCollection.cs: Added LAME spec comment as there is no
	  relevant event. Removed MonoTODO too.

2007-09-26  Nagappan A <anagappan@novell.com> 

	* DataView.cs (ToTable): Added params keyword.
	
	* DataTable.cs: Added XmlSchemaProvider attribute.

2007-09-25  Konstantin Triger <kostat@mainsoft.com>

	* DataSet.cs: correct WriteAttributeString while writing xml with
		XmlWriteMode.WriteSchema.

2007-09-25  Nagappan A  <anagappan@novell.com>

	* DataTable.cs: Code alignment.

2007-08-14  Vladimir Krasnov <vladimirk@mainsoft.com>

	* DataColumnCollection.cs: refactoring, fixed columnNameCount comparer
	to remove culture sensitive ToLower() calls

2007-07-22  Nagappan A  <anagappan@novell.com>

	* DataRow.cs: Added internal set property for Table in 2.0
	profile.

	* DataColumn.cs: Added internal set property for Table in 2.0
	profile.

2007-07-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataRowCollection.cs: Only override Count on 2.0 profile.
	* RelatedDataView.cs: Fixed line endings.
	* XmlDataInferenceLoader.cs: Fixed line endings.

2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataTableCollection.cs: CopyTo is 2.0 only. Removed extra tabs,
	and changed spaces to tabs.

2007-06-06  Nagappan A  <anagappan@novell.com>

	* DataTable.cs (Select): Removed ununsed variable.

2007-05-30  Nagappan A  <anagappan@novell.com>

	* DataColumnCollection.cs (CopyTo): Method specific to 2.0
	profile.

	* DataRowCollection.cs (Count): Property is overridden in 2.0
	profile.
