@@ -1,3 +1,7 @@
+2008-02-04 Arina Itkes <arinai@mainsoft.com>
+	
+	* DataTable.cs: Fix for IXmlSerializable.ReadXml.
+
 2008-01-28 Arina Itkes <arinai@mainsoft.com>
 	
 	* DataTable.cs: Fix for IXmlSerializable.WriteXml.
